# FEUP-SecureFS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_username.py
backend/config/: settings.py  urls.py
backend/files/: models.py  serializers.py  urls.py  views.py
backend/files/migrations/: 0001_initial.py  0002_alter_filesystemnode_parent.py  0003_remove_filesystemnode_is_public_root.py
backend/public/: models.py  serializers.py  urls.py  views.py
backend/public/migrations/: 0001_initial.py
backend/sharing/: models.py  serializers.py  urls.py  views.py
backend/sharing/migrations/: 0001_initial.py
backend/users/: urls.py
frontend/: index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/Auth/: LoginForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: FilesPage.tsx  LoginPage.tsx  MyPublicPage.tsx  PublicFilesPage.tsx  PublicPagePreview.tsx  SharedWithMePage.tsx  ShellPage.tsx
frontend/src/services/: apiClient.ts  authService.ts  fileService.ts  publicPageService.ts  tokenService.ts
frontend/src/types/: index.ts
secure-file-sharing-frontend/: package.json  tailwind.config.js
secure-file-sharing-frontend/src/: App.tsx  index.css  main.tsx
secure-file-sharing-frontend/src/contexts/: AuthContext.tsx
(+18 files in other folders)
